projet_gl/src/test/deca/context/valid/3_37/3_37_2_Not.deca
// Description:
//    Programme minimaliste faisant un not
//
// Resultats:
//    
//
// Historique:
//    cree le 24/12/2023

{
        boolean a;
        !a;
}
