projet_gl/src/test/deca/context/invalid/3_37/3_37_2_Not_Float.deca
// Description:
//    Problème de typage, il ne faut soit un boolean
//
// Resultats:
//    Ligne 15: The type is not boolean
// 
// Historique:
//    cree le 29/12/2023

{
   float a;

   // Doit etre refuse.
   !a;
}
